--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,25 @@
 	padding: 0px;
 	box-sizing: border-box;
 }
+
+:root{
+	--tg-theme-bg-color: #212121;
+	--tg-theme-text-color: #ffffff;
+	--tg-theme-link-color: #8774e1;
+	--tg-theme-secondary-bg-color: #0f0f0f;
+}
+
+body{
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
+}
+
+a{
+	text-decoration: none;
+	color: var(--tg-theme-link-color);
+}
+
+.wrapper{
+	margin: 0 auto;
+	max-width: 1200px;
+}
