--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@ body{
 	background-color: var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
 	font-size: 20px;
+	font-family: Tahoma;
 }
 
 a{
