--- a/frontend/src/pages/MainPage/mainPage.css
+++ b/frontend/src/pages/MainPage/mainPage.css
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+	color: white;
 }
 .mainPage__img-info h3 {
   margin-bottom: 20px;
