Added serial code page

--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px;
+	padding: 10px 5px;
 }
 .header__user span{
 	margin-right: 10px;
