--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,23 +1,107 @@
-.header{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 10px 5px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 5px;
 }
-.header__user span{
-	margin-right: 10px;
-	position: relative;
+.header__link{
+	font-size: 20px;
 }
-.header__user span::after{
-	content: '/';
-	display: block;
-	position: absolute;
-	left: calc(100% + 2px);
-	top: 0;
+.header__user span {
+  margin-right: 10px;
+  position: relative;
 }
-.header__user button{
-	color: var(--tg-theme-link-color);
-	border: none;
-	cursor: pointer;
-	background: transparent;
+.header__user span::after {
+  content: "/";
+  display: block;
+  position: absolute;
+  left: calc(100% + 2px);
+  top: 0;
+}
+.header__user button {
+  color: var(--tg-theme-link-color);
+  border: none;
+  cursor: pointer;
+  background: transparent;
+}
+
+.burger {
+  display: none;
+  z-index: 15;
+  width: 40px;
+  height: 23px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.burger span {
+  display: block;
+  width: 40px;
+  height: 3px;
+  background-color: white;
+  transform-origin: 50%;
+  transition: all 0.3s;
+}
+.burger.active span:nth-child(1) {
+  position: absolute;
+  transform: rotate(45deg);
+  top: 50%;
+}
+.burger.active span:nth-child(2) {
+  opacity: 0;
+}
+.burger.active span:nth-child(3) {
+  position: absolute;
+  transform: rotate(-45deg);
+  top: 50%;
+}
+
+@media (max-width: 600px) {
+  .header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px 5px;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 30%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.8);
+		transform: translateX(100%);
+		transition: transform 0.3s;
+  }
+	.header.active {
+		transform: translateX(0);
+	}
+  .header__link {
+    margin-bottom: 20px;
+  }
+  .header__link {
+    margin-bottom: 20px;
+  }
+  .header__link:first-of-type {
+    margin-top: 50px;
+  }
+  .header__user {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+  }
+  .header__user span {
+    margin-right: 0;
+  }
+  .header__user span::after {
+    display: none;
+  }
+
+  .burger {
+    display: flex;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
 }
