--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -99,7 +99,7 @@
 
   .burger {
     display: flex;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
     cursor: pointer;
