--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -11,13 +11,13 @@
   margin-right: 10px;
   position: relative;
 }
-.header__user span::after {
+/* .header__user span::after {
   content: "/";
   display: block;
   position: absolute;
   left: calc(100% + 2px);
   top: 0;
-}
+} */
 .header__user button {
   color: var(--tg-theme-link-color);
   border: none;
