--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+	outline: none;
 }
 
 :root {
@@ -19,6 +20,10 @@ body {
   color: var(--tg-theme-text-color);
   font-size: 20px;
   font-family: "Roboto", sans-serif;
+}
+
+input{
+	font-family: "Roboto", sans-serif;
 }
 
 a {
