--- a/frontend/src/components/ChatModal/chatModal.css
+++ b/frontend/src/components/ChatModal/chatModal.css
@@ -10,6 +10,31 @@
 	border-radius: 12px;
 	border: 3px solid var(--tg-theme-link-color);
 	font-size: 16px;
+	transition: transform 0.2s ease-in-out;
+	transform: translateY(110%);
+}
+.chatModal.active{
+	transform: translateY(0%);
+}
+.chatModal__open{
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	width: 80px;
+	height: 80px;
+	transition: opacity 0.7s ease-in-out, transform 0.2s ease-in-out;
+	opacity: 0;
+	cursor: pointer;
+}
+.chatModal__open.active{
+	opacity: 1;
+}
+.chatModal__open:hover{
+	transform: scale(1.1);
+}
+.chatModal__open img{
+	width: 100%;
+	height: 100%;
 }
 .chatModal__header{
 	display: flex;
@@ -30,6 +55,10 @@
 	width: 30px;
 	height: 30px;
 	cursor: pointer;
+	transition: transform 0.1s ease-in-out;
+}
+.chatModal__header-close:hover{
+	transform: scale(0.9);
 }
 .chatModal__body{
 	height: calc(100% - 50px);
